--- a/application/view/home.html
+++ b/application/view/home.html
@@ -1,2 +1,27 @@
 <navbar></navbar>
-this is home!
+<div class="">
+    <div class="container mw-900">
+        <div class="w-100 h-45">
+            <div class="row">
+                <div class="col-sm-6 text-muted">
+                    <h5 class="lh-50">Generate Report</h5>
+                </div>
+                <div class="col-sm-6 pt-5">
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <button type="button" class="btn btn-outline-secondary">Search by Action</button>
+                            <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="sr-only">Toggle Dropdown</span>
+                            </button>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="#">Date</a>
+                                <a class="dropdown-item" href="#">Cost</a>
+                            </div>
+                        </div>
+                        <input type="text" class="form-control" aria-label="Text input with segmented dropdown button">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
