--- a/application/view/home.html
+++ b/application/view/home.html
@@ -1,5 +1,5 @@
 <navbar></navbar>
-<div class="">
+<div ng-controller="homeCtrl">
     <div class="container mw-900">
         <div class="w-100 h-45">
             <div class="row">
@@ -9,19 +9,49 @@
                 <div class="col-sm-6 pt-5">
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
-                            <button type="button" class="btn btn-outline-secondary">Search by Action</button>
+                            <button type="button" class="btn btn-outline-secondary" ng-click="search(searchStr)">Search by {{sortBy}}</button>
                             <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="sr-only">Toggle Dropdown</span>
                             </button>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Date</a>
-                                <a class="dropdown-item" href="#">Cost</a>
+                                <span ng-repeat="i in sort">
+                                    <a class="dropdown-item" ng-click="sortByFilter(i)">{{i}}</a>
+                                </span>
                             </div>
                         </div>
-                        <input type="text" class="form-control" aria-label="Text input with segmented dropdown button">
+                        <input type="text" class="form-control" ng-model="searchStr" placeholder="Search by keyword" ng-change="getdata(searchStr);" aria-label="Text input with segmented dropdown button">
+                        <ul class="list-group" style="z-index:1">
+                            <a ng-repeat="result in data.dataSet" ng-if="searchStr!=''&& searchStr!==result.title" ng-click="getdata(result.title);">
+                                <li class="list-group-item wrap-list list-group-item-secondary dropdown-item f-14">
+                                    {{result.title}}
+                                </li>
+                            </a>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
+        <br><br>
+        <section ng-repeat="result in dataSearch | orderBy : sortBy">
+            <div class="container py-3">
+                <div class="card">
+                <div class="row ">
+                    <div class="col-md-4">
+                        <img ng-src="{{result.image}}" width="190px">
+                    </div>
+                    <div class="col-md-8 px-3">
+                        <div class="card-block px-3">
+                        <h4 class="card-title">{{result.title}}</h4>
+                        <p class="card-text f-14">{{result.shortDes}}</p>
+                        <small class="text-muted">PUBLISHED : {{result.date | date :'medium'}}</small><br>
+                        <br><small class="text-muted">COST OF REPORT : ${{result.cost}}</small>
+                        </div>
+                    </div>
+            
+                    </div>
+                </div>
+                </div>
+            </div>
+        </section>
     </div>
 </div>
